fixed the alignment of search in navbar in chrome and safari

--- a/less/overrides.less
+++ b/less/overrides.less
@@ -196,6 +196,7 @@ form#search-block-form {
 .navbar #block-search-form {
   float: none;
   margin: 8px 0 5px 5px;
+  width: 200px;
   @media @normal {
     float: right;
   }
@@ -203,6 +204,9 @@ form#search-block-form {
 .navbar-search .control-group {
   margin-bottom:0px;
 }
+/*.navbar .btn {
+  line-height: 1.4;
+}*/
 
 // Action Links
 ul.action-links {
